--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
     rel="stylesheet">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      body{
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
-    <noscript>
+    <!-- <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+    </noscript> -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
