--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       body{
         margin: 0;
         padding: 0;
+        transition: background 0.5s linear;
       }
     </style>
   </head>
