--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,40 @@
         margin: 0;
         padding: 0;
         transition: background 0.5s linear;
+
+        .bg-container{
+          height: 100vh;
+          width: 100vw;
+          background-size: 600% 600%;
+          background-image: linear-gradient(60deg, #FFF8F8 ,rgb(206, 175, 175), rgba(156, 123, 123, 0.9) );
+          animation: bgAnimatedGradient 15s infinite linear;
+        }
+      }
+
+      .on{
+
+        .bg-container{
+          background-image: linear-gradient(60deg, #1C1A1F ,rgba(17, 4, 4, 0.9) ,rgba(63, 40, 40, 1.00));
+        }
+      }
+
+      @keyframes bgAnimatedGradient{
+        0% {
+          background-position: 0 85%;
+        }
+        50%{
+          background-position: 100% 20%;
+        }
+        100%{
+          background-position: 0% 85%;
+        }
+
       }
     </style>
   </head>
   <body class="on">
-    <div id="app"></div>
+    <div class="bg-container">
+      <div id="app"></div>
+    </div>
   </body>
 </html>
