--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     rel="stylesheet">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
+      html{
+        scroll-behavior: smooth;
+      }
       body{
         margin: 0;
         padding: 0;
@@ -28,7 +31,7 @@
       .on{
 
         .bg-container{
-          background-image: linear-gradient(60deg, #1C1A1F ,rgba(17, 4, 4, 0.9) ,rgba(63, 40, 40, 1.00));
+          background-image: linear-gradient(60deg, #1f1a1a ,#161111 ,#1b1414);
         }
       }
 
