--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
       body{
         margin: 0;
         padding: 0;
+        box-sizing: border-box;
         transition: background 0.5s linear;
 
         .bg-container{
@@ -31,8 +32,15 @@
       .on{
 
         .bg-container{
-          background-image: linear-gradient(60deg, #1f1a1a ,#161111 ,#1b1414);
+          background-image: linear-gradient(60deg, #1f1a1a ,#1b1414 ,#2e1f1f);
+
         }
+        @media only screen and (max-width: 800px) {
+          .bg-container{
+            background-image: linear-gradient(60deg, #1f1a1a ,#1d1717 ,rgb(24, 18, 18));
+          }
+        }
+
       }
 
       @keyframes bgAnimatedGradient{
