--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,19 +18,17 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        transition: background 0.5s linear;
+      }
 
-        .bg-container{
-          height: 100vh;
-          width: 100vw;
-          background-size: 600% 600%;
-          background-image: linear-gradient(60deg, #FFF8F8 ,rgb(206, 175, 175), rgba(156, 123, 123, 0.9) );
-          animation: bgAnimatedGradient 15s infinite linear;
-        }
+      .bg-container{
+        height: 100vh;
+        width: 100vw;
+        background-size: 600% 600%;
+        background-image: linear-gradient(60deg, #FFF8F8 ,rgb(206, 175, 175), rgba(156, 123, 123, 0.9) );
+        animation: bgAnimatedGradient 15s infinite linear;
       }
 
       .on{
-
         .bg-container{
           background-image: linear-gradient(60deg, #1f1a1a ,#1b1414 ,#2e1f1f);
 
