--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
 
+    <!-- ANIMATION LIBRARY -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
     <title><%= htmlWebpackPlugin.options.title %></title>
 
   </head>
