--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!-- ICONS GOOGLE -->
 
@@ -15,6 +15,9 @@
   <!-- ANIMATION LIBRARY -->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+  <script src="https://cdn.tailwindcss.com"></script>
+
 
   <title>Quilombolas</title>
 
