--- a/public/index.html
+++ b/public/index.html
@@ -31,13 +31,10 @@
       document.documentElement.style.setProperty('--vh', `${vh}px`);
     </script>
 
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Quilombolas</title>
     
   </head>
   <body class="dark">
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
 
     <!-- built files will be auto injected -->
