--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,47 @@
 
     <title>Quilombolas</title>
     
+    <style>
+      @keyframes load {
+        to{transform: rotate(360deg);}
+      }
+
+      .pre {
+        width: 80px;
+        height: 80px;
+        background-image: url("https://ilustracode.com.br/assets/images/load.png");
+        background-position: center;
+        background-size: contain;
+        animation: load 5s infinite linear;
+      }
+
+      .box-load {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .content {
+        display: none;
+      }
+    </style>
+    <script>
+      function loading() {
+        document.getElementsByClassName("box-load")[0].style.display = "none";
+        document.getElementsByClassName("content")[0].style.display = "block";
+      }
+    </script>
   </head>
-  <body class="dark">
-    <div id="app"></div>
+  <body class="dark"  onLoad="loading()">
+    <div class="box-load">
+      <div class="pre"></div>
+    </div>
+    <div class="content">
+      <div id="app"></div>
+    </div>
 
     <!-- built files will be auto injected -->
 
