--- a/public/index.html
+++ b/public/index.html
@@ -30,39 +30,13 @@
 
   <title>Quilombolas</title>
 
-  <!-- <style>
-      @keyframes load {
-        to{transform: rotate(360deg);}
-      }
-
-      .pre {
-        width: 80px;
-        height: 80px;
-        background-image: url("https://ilustracode.com.br/assets/images/load.png");
-        background-position: center;
-        background-size: contain;
-        animation: load 5s infinite linear;
-      }
-
-      .box-load {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .content-page {
-        display: none;
-      }
-    </style>
-    <script>
-      function loading() {
-        document.getElementsByClassName("box-load")[0].style.display = "none";
-        document.getElementsByClassName("content-page")[0].style.display = "block";
-      }
-    </script> -->
+  <style>
+    main,
+    header,
+    footer {
+      display: none;
+    }
+  </style>
 </head>
 
 <body class="dark" onload="loadApp()">
@@ -95,6 +69,9 @@
       var loader = document.getElementById("preloader")
       console.log(loader)
       loader.style.display = "none";
+      document.querySelector("main").style.display = "block"
+      document.querySelector("header").style.display = "flex"
+      document.querySelector("footer").style.display = "flex"
     }
   </script>
 </body>
