--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,20 @@
     footer {
       display: none;
     }
+
+    body::-webkit-scrollbar {
+      width: 2px;
+    }
+
+    body::-webkit-scrollbar-track {
+      background: transparent;
+      /* color of the tracking area */
+    }
+
+    body::-webkit-scrollbar-thumb {
+      background-color: rgb(0, 0, 0);
+      border-radius: 20px;
+    }
   </style>
 </head>
 
