--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,37 @@
       document.querySelector("footer").style.display = "flex"
     }
   </script>
+
+  <style>
+    .get div h3 {
+      color: #000000dc;
+      margin-bottom: .5%;
+    }
+
+    .get div p {
+      color: #000;
+    }
+
+    .get div {
+      width: 70%;
+      margin: 2% 0;
+    }
+
+    .dark .get div h3 {
+      color: #ffffffd1;
+    }
+
+    .dark .get div p {
+      color: #fff;
+
+    }
+
+    @media only screen and (max-width: 1000px) {
+      .get div {
+        width: 80%;
+      }
+    }
+  </style>
 </body>
 
 </html>
