--- a/public/index.html
+++ b/public/index.html
@@ -54,9 +54,6 @@
 </head>
 
 <body class="dark" onload="loadApp()">
-  <!-- <div class="box-load">
-      <div class="pre"></div>
-    </div> -->
   <div id="app"></div>
 
   <!-- built files will be auto injected -->
@@ -92,6 +89,7 @@
   <style>
     .get div h3 {
       color: #000000dc;
+      font-size: 25px;
       margin-bottom: .5%;
     }
 
