--- a/public/index.html
+++ b/public/index.html
@@ -113,6 +113,22 @@
 
     }
 
+    @media only screen and (max-height: 600px) {
+      .get div h3 {
+        font-size: 20px;
+        padding-bottom: .3%;
+      }
+
+      .get div p {
+        font-size: 15px;
+      }
+
+      .get div {
+        width: 90%;
+      }
+
+    }
+
     @media only screen and (max-width: 1024px) {
       .get div {
         width: 90%;
