--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
 </head>
 
 <body class="dark" onload="loadApp()">
+  <noscript>Ative o JavaScript do seu navegador para o melhor aproveitamento do site</noscript>
   <div id="app"></div>
 
   <!-- built files will be auto injected -->
